# InventoryManager

./: .clang-format  .gitignore  CMakeLists.txt  imgui.ini  readme.md
docs/: database.json
src/: CMakeLists.txt  autoInv.cpp  autoInvVisualizer.cpp  change.cpp  changeExeService.cpp  changeTracker.cpp  config.cpp  dbFilter.cpp  dbInterface.cpp  dbService.cpp  filterSearch.hpp  imGuiDX11Context.cpp  main.cpp  mappingWidgets.cpp  partApi.cpp  threadPool.cpp  widgets.cpp
src/include/: app.hpp  autoGenInfo.hpp  autoInv.hpp  change.hpp  changeExeService.hpp  changeTracker.hpp  config.hpp  dataTypes.hpp  dbFilter.hpp  dbInterface.hpp  dbService.hpp  logger.hpp  partApi.hpp  pch.hpp  threadPool.hpp  timing.hpp
src/include/bom/: bomReader.hpp
src/include/userInterface/: app.hpp  autoInvVisualizer.hpp  dbDataVisualizer.hpp  dx11Context.hpp  imGuiDX11Context.hpp  imguiContext.hpp  mappingWidgets.hpp  uiTypes.hpp  widgets.hpp
src/userInterface/: dx11Context.cpp
